test/library/standard/List/pop/listPopIndexHaltBadIndex.good
listPopIndexHaltBadIndex.chpl:10: error: halt reached - Index for "list.getAndRemove" out of bounds: 9
